green_app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: green-app
  labels:
    app: green
spec:
  containers:
    - name: green_app
      image: hashicorp/http-echo
      args:
        - "-text=I am green"

---

kind: Service
apiVersion: v1
metadata:
  name: green_service
spec:
  selector:
    app: green
  ports:
    - port: 8081
