greenapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: hashicorp/http-echo
        args:
        - "-text=I am green"
        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  ports:
  - port: 81
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: green
