Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /blue
          backend:
            serviceName: blue_service
            servicePort: 8080
        - path: /green
          backend:
            serviceName: green_service
            servicePort: 8081
